# mindscope-to-nwb-zarr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.codeocean/: app-panel.json  datasets.json  environment.json  resources.json
code/: code_ocean_notes.md  pyproject.toml  run_capsule.py
code/cached_metadata/visual-behavior-ophys/project_metadata/: behavior_session_table.csv  ophys_session_table.csv
code/mindscope_to_nwb_zarr/aind_data_schema/: utils.py
code/mindscope_to_nwb_zarr/aind_data_schema/visual_behavior_ephys/: acquisition.py  data_description.py  metadata_generation.py  procedures.py  subject.py
code/mindscope_to_nwb_zarr/aind_data_schema/visual_behavior_ophys/: acquisition_behavior.py  acquisition_behavior_only.py  acquisition_behavior_ophys.py  data_description.py  metadata_generation.py  procedures.py  subject.py
code/mindscope_to_nwb_zarr/aind_data_schema/visual_coding_ephys/: acquisition.py  data_description.py  metadata_generation.py  procedures.py  subject.py
code/mindscope_to_nwb_zarr/aind_data_schema/visual_coding_ophys/: acquisition.py  data_description.py  instrument.py  metadata_generation.py  procedures.py  subject.py
code/mindscope_to_nwb_zarr/data_conversion/: conversion_utils.py  create_input_utils.py
code/mindscope_to_nwb_zarr/data_conversion/visual_behavior_ephys/: CHANGELOG.md  create_inputs.py  run_conversion.py
code/mindscope_to_nwb_zarr/data_conversion/visual_behavior_ophys/: CHANGELOG.md  create_inputs.py  run_conversion.py
code/mindscope_to_nwb_zarr/data_conversion/visual_coding_ephys/: CHANGELOG.md  create_inputs.py  run_conversion.py
code/mindscope_to_nwb_zarr/data_conversion/visual_coding_ophys/: CHANGELOG.md  check_dandi_matches_metadata.py  create_inputs.py  run_conversion.py
code/ndx-aibs-ecephys/: ndx-aibs-ecephys.namespace.yaml
code/ndx-aibs-stimulus-template/: ndx-aibs-stimulus-template.extensions.yaml  ndx-aibs-stimulus-template.namespace.yaml
code/ndx-aibs-visual-coding-2p/: CHANGELOG.md  ndx-aibs-visual-coding-2p.extensions.yaml  ndx-aibs-visual-coding-2p.namespace.yaml
code/ndx-ellipse-eye-tracking/: ndx-ellipse-eye-tracking.extensions.yaml  ndx-ellipse-eye-tracking.namespace.yaml
code/reference/: all_experiment_ids.csv  ethics_review_ids.csv  experiments_without_session_id.csv  ophys_session_screen_centers.csv  visual_coding_ephys_subject_mapping.json
code/scripts/: create_visbeh_ephys_placeholder_files.py  create_viscod_ephys_placeholder_files.py  create_viscod_ophys_placeholder_files.py  create_visual_behavior_ophys_pipeline_inputs.py  export_visbeh_ephys_to_zarr.py  export_visbeh_ophys_to_zarr.py  export_viscod_ephys_to_zarr.py  export_viscod_ophys_to_zarr.py  get_mouse_ids_from_allensdk.py  hdf5_to_zarr_changelog.md  list_all_experiment_ids.py  list_experiments_without_session_id.py  metadata_from_allensdk.py  nwb_cached_specs_to_json.py
data/: mouse_ids_by_experiment.json
data/cached_metadata/visual-behavior-ophys/project_metadata/: ophys_experiment_table.csv
environment/: Dockerfile
ndx-aibs-ecephys/: CHANGELOG.md  ndx-aibs-ecephys.extension.yaml  ndx-aibs-ecephys.namespace.yaml
notebooks/: vbn_neurips_tutorial.ipynb  vbn_neurips_tutorial_nwb.ipynb
notebooks/swdb-visual-coding-ophys-nwb/: vc2p-analysis.md  vc2p-cross-session-data.md  vc2p-dataset.md  vc2p-evoked-response.md  vc2p-session-data.md  vc2p-stimuli.md
scripts/: compare_hdf5_zarr.py  export_visbeh_ephys_to_zarr.py  export_visbeh_ophys_to_zarr.py  export_visbeh_to_zarr.py  export_viscod_ephys_to_zarr.py  export_viscod_ophys_to_zarr.py  export_viscod_to_zarr.py  get_mouse_ids_from_allensdk.py  metadata_from_allensdk.py  nwb_cached_specs_to_json.py  zarr_spec_to_json.py
src/mindscope_to_nwb_zarr/: acquisition_visual_behavior_ephys.py  pynwb_utils.py
src/mindscope_to_nwb_zarr/aind-data-schema/: acquisition_visual_behavior_ephys.py
src/mindscope_to_nwb_zarr/aind_data_schema/: acquisition_visual_behavior_ephys.py  acquisition_visual_behavior_ophys_behavior.py  acquisition_visual_behavior_ophys_behavior_ophys_single_plane.py  acquisition_visual_coding_ephys.py  custom_stimulus.py  stimuli.py  utils.py
src/mindscope_to_nwb_zarr/aind_data_schema/visual_behavior_ephys/: metadata_generation.py  (+1 more)
(+6 files in other folders)
