[project]
name = "mindscope-to-nwb-zarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aind-data-schema>=2.1.0",
    "hdmf",
    "hdmf-zarr>=0.2.0",
    "pynwb>=2.8.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# this file is created/updated when the package is installed and used in
# src/mindscope_to_nwb_zarr/__init__.py to set `mindscope_to_nwb_zarr.__version__`
version-file = "src/mindscope_to_nwb_zarr/_version.py"

