[project]
name = "mindscope-to-nwb-zarr"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"

# These are set up to correspond with the Code Ocean capsule configuration
requires-python = "==3.12.4"
dependencies = [
    "aind-data-schema==2.3.0",
    "hdmf==4.2.0",
    "hdmf-zarr==0.12.0",
    "nwbinspector==0.6.5",
    "numpy>=1.26.0",
    "pynwb==3.1.3",
    "zarr==2.18.7",
    # "allensdk", # note that it needs to be installed from a specific branch (see tool.uv.sources) to be compatible with later numpy versions
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# this file is created/updated when the package is installed and used in
# mindscope_to_nwb_zarr/__init__.py to set `mindscope_to_nwb_zarr.__version__`
version-file = "mindscope_to_nwb_zarr/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["mindscope_to_nwb_zarr"]

[tool.uv.sources]
allensdk = { git = "https://github.com/rly/AllenSDK.git", rev = "a1d68976874097bdcb9b3321eda539538b24bb8b" }

